--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
     -->
     <title>React App</title>
     <script async src='https://www.google-analytics.com/analytics.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
   </head>
   <body>
