--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,12 +22,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <title></title>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
   </head>
-  <body>
+  <body style="background-color: #171717;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div id="main-loading">
+        <div class="main-loading-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
